src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>dca_cnvrt_file__Original_Record_ID__c</fullName>
        <description>The original Note or Attachment ID this ContentVersion was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</description>
        <externalId>true</externalId>
        <inlineHelpText>The original Note or Attachment ID this ContentVersion was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</inlineHelpText>
        <label>Original Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__Original_Record_Owner_ID__c</fullName>
        <description>The owner ID of the original Note or Attachment that was converted.</description>
        <externalId>true</externalId>
        <inlineHelpText>The owner ID of the original Note or Attachment that was converted.</inlineHelpText>
        <label>Original Record Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__Original_Record_Parent_ID__c</fullName>
        <description>The original Note or Attachment parent ID this ContentVersion was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</description>
        <externalId>true</externalId>
        <inlineHelpText>The original Note or Attachment parent ID this ContentVersion was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</inlineHelpText>
        <label>Original Record Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>